Fix GXT grid column and header alignment problem in Chrome
SVN: 28400

--- a/openbis/source/java/ch/systemsx/cisd/openbis/public/resources/css/gxt-all.css
+++ b/openbis/source/java/ch/systemsx/cisd/openbis/public/resources/css/gxt-all.css
@@ -7452,3 +7452,5 @@ body.x-body-masked .x-window-plain .x-window-mc {
 .x-window-dlg .ext-mb-error {
     background-image:url(../images/default/window/icon-error.gif);
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) { .x-grid3-row td.x-grid3-cell { padding-left: 0; padding-right: 0; }}
